--- a/css/style.css
+++ b/css/style.css
@@ -32,7 +32,7 @@ img {
 }
 
 div {
-    height: 150px;
+    min-height: 150px;
     padding: 25px;
 }
 
@@ -77,5 +77,6 @@ footer p {
     text-align: center;
     padding-bottom: 10px;
     padding-right: 10px;
+    padding-top: 0px;
 
 }
